--- a/src/web/package.json
+++ b/src/web/package.json
@@ -28,8 +28,7 @@
 		"zone.js": "^0.6.12",
 		"angular2-in-memory-web-api": "0.0.9",
 		"bootstrap": "^3.3.6",
-		"mongodb": "^2.1.19",
-		"monk": "^1.0.1"
+		"plugin-typescript": "4.0.10"
 	},
 	"devDependencies": {
 		"concurrently": "^2.0.0",
