--- a/src/web/package.json
+++ b/src/web/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "router",
+	"name": "simpleStore",
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
@@ -27,8 +27,7 @@
 		"rxjs": "5.0.0-beta.6",
 		"zone.js": "^0.6.12",
 		"angular2-in-memory-web-api": "0.0.9",
-		"bootstrap": "^3.3.6",
-		"plugin-typescript": "4.0.10"
+		"bootstrap": "^3.3.6"
 	},
 	"devDependencies": {
 		"concurrently": "^2.0.0",
